# x402-Emission

./: .env.example  .gitignore  COMPLETE_DOCUMENTATION.md  README.md
contracts/: Cargo.toml
contracts/collateral-manager/: Cargo.toml
contracts/collateral-manager/src/: lib.rs
contracts/emission-option/: Cargo.toml
contracts/emission-option/src/: lib.rs
contracts/options-amm/: Cargo.toml
contracts/options-amm/src/: lib.rs
contracts/options-factory/: Cargo.toml
contracts/options-factory/src/: lib.rs
contracts/price-oracle/: Cargo.toml
contracts/price-oracle/src/: lib.rs
contracts/risk-manager/: Cargo.toml
contracts/risk-manager/src/: lib.rs
contracts/settlement-engine/: Cargo.toml
contracts/settlement-engine/src/: lib.rs
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/pools/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/app/trade/: page.tsx
frontend/src/app/write/: page.tsx
frontend/src/components/: DemoModeIndicator.tsx  FreighterSetupGuide.tsx  MockDataBanner.tsx  Navbar.tsx  OptionCard.tsx  Particles.tsx  Toast.tsx  WalletConnect.tsx  WalletSelector.tsx
frontend/src/hooks/: useRealTimeData.ts
frontend/src/lib/: pricing.ts  stellar-secure.ts  stellar.ts  wallets.ts
frontend/src/types/: freighter.d.ts
scripts/: README.md  create-demo-option.sh  create-pools.sh  create-test-options.sh  deploy.sh  init-and-create-options.sh  initialize.sh  quick-setup.sh  test-deployment.sh
(+4 files in other folders)
