[workspace]
resolver = "2"
members = [
    "emission-option",
    "options-factory",
    "collateral-manager",
    "options-amm",
    "settlement-engine",
    "risk-manager",
    "price-oracle",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/x402/emission-options"

[workspace.dependencies]
soroban-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
